--- a/src/index.html
+++ b/src/index.html
@@ -39,20 +39,64 @@
   </head>
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
-  <body>
+
+    <!-- **** Header **** -->
+    <header class="header">
+        <nav class="nav">
+        <a 
+          rel="noreferrer" 
+          href="index.html"
+          target="_self"
+          >
+          Home
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="involvement.html"
+          target="_self"
+          >
+          Involvement
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="coursework.html"
+          target="_self"
+          >
+          Coursework
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="#about"
+          target="_self"
+          >
+          About Me
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="#contact"
+          target="_blank"
+          >
+          Contact
+        </a>
+      </nav>
+    </header>
+    <!-- /END Header -->
+     <body>
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Louisa Rawles.</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a student at the University of Virginia 
+          <br />
+          and a software developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Learn more</a
           >
         </p>
       </div>
@@ -79,11 +123,27 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                I study Computer Science and General Business at the University of Virginia, pursuing my passion for learning how to create software that solves real-world challenges and drives long-term impact.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Outside of class, 
+                I study Human-Robot Interaction as a Research Assistant for the UVa Engineering Link Lab - Collaborative Robotics Lab - and a MATH 1310 (Calculus 1) Peer Coach for the UVa P2L Program.
+              </p>
+              <p class="about-wrapper__info-text">
+                In my free time, 
+                I enjoy hiking, 
+                squash, 
+                reading, 
+                scrapbooking, 
+                and refining my mahjong strategy. 
+                I'm naturally curious, 
+                and as such I often find myself exploring new topics outside the scope of my coursework.
+                I love challenging myself with unique goals and adventures, 
+                and I'm currently training for my first ski-mountaineering race in February.
+              </p>
+              <p class="about-wrapper__info-text">
+                My goal as a software engineer is to design technology that transforms our current solution set for complex world problems 
+                driven by a focus on users and the direct and indirect impact of deployment. 
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -102,7 +162,63 @@
     </section>
     <!-- /END About Section -->
 
-    <!-- **** Projects Section **** -->
+    <!-- **** Education Section **** -->
+    <section id="education">
+      <div class="container">
+        <div class="education-wrapper">
+          <h2 class="section-title dark-blue-text">Education</h2>
+
+          <!-- Notice: each .row is an education organization -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="education-wrapper__text">
+                <h3 class="education-wrapper__text-title">The University of Virginia</h3>
+                <h4 class="education-wrapper__text-subtitle">Bachelor of Arts in Computer Science
+                  <br />
+                  Commerce General Business Minor
+                </h4>
+                <h5 class="education-wrapper__text-subtitle">Expected Graduation: May 2027</h5>
+                <p class="mb-4">
+                  In my time at UVa, I have learned the development process through CS 3140 (Software Development Essentials),
+                  including bi-weekly team projects addressing problems such as apportionment of representatives,
+                  building an infinite Wordle, and a bus routes database.
+                  </p>
+                  <p class="mb-4">
+                  My low-level software skills have been honed through extensive practice with algorithms and data structures
+                  in CS 2100 (Data Structures and Algorithms) and CS 3100 (Data Structures and Algorithms 2). Individual 
+                  course projects implement algorithms to solve problems such as dynamic programming and greedy designs for 
+                  optimization problems. 
+                  </p>
+                  <p class="mb-4">
+                  My study of business fundamentals enhances my technical skills, including preparing a business diagram
+                  and financial modeling in CGBM 2130 (Digital Skills for the Workplace), as well as marketing strategies in CGBM 2120
+                  (Principles of Marketing). Additionally, I have a low-level understanding of financial statements and accounting principles from COMM 2010 (Financial Accounting).
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  class="cta-btn text-color-main"
+                  href="coursework.html"
+                >
+                  Full Courselist
+                </a>
+                <a
+                  rel="noreferrer"
+                  class="cta-btn text-color-main"
+                  href="involvement.html"
+                >
+                  Involvement on Grounds
+                </a>
+                </div>
+            </div>
+          </div>
+        <!-- /END Education -->
+        </div>
+      </div>
+    </section>
+    <!-- /END Education Section -->
+
+        <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
@@ -112,22 +228,15 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Portfolio</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    Extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, html, css, Node.js, and bootstrap
+                    to showcase my skills, background, and experiences.
+                    I customized the existing stylesheet and developed new SCSS files for the header, course list, education, involvement list, and hero image sections.
+
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
@@ -270,15 +379,15 @@
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
-        <h2 class="section-title">Contact</h2>
+        <h2 class="section-title">Get in touch.</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Contact me with inquiries or to request further information.</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:hnj7pk@virginia.edu"
+            >Email Me</a
           >
         </div>
       </div>
@@ -292,13 +401,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://linkedin.com/in/louisa-rawles-18aa6932a" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/louisarawles" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -310,30 +416,6 @@
           © 2021 - Template developed by
           <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
             >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer" 
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobiwave/simplefolio on GitHub"
-            >Star</a
           >
         </p>
       </div>
