Updated project 0 to include this portfolio and a link to the git hub repository.

--- a/src/index.html
+++ b/src/index.html
@@ -228,10 +228,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Portfolio</h3>
+                <h3 class="project-wrapper__text-title">My Portfolio</h3>
                 <div>
                   <p class="mb-4">
-                    Extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, html, css, Node.js, and bootstrap
+                    I extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, html, css, Node.js, and bootstrap
                     to showcase my skills, background, and experiences.
                     I customized the existing stylesheet and developed new SCSS files for the header, course list, education, involvement list, and hero image sections.
 
@@ -240,8 +240,8 @@
                 <a
                   rel="noreferrer"
                   target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/louisarawles/portfolio/settings/access"
                 >
                   Source Code
                 </a>
@@ -249,23 +249,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
+                
           </div>
           <!-- /END Project -->
 
