I am amending the previous commit

--- a/src/index.html
+++ b/src/index.html
@@ -234,8 +234,9 @@
                     I extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, html, css, Node.js, and bootstrap
                     to showcase my skills, background, and experiences.
                     I customized the existing stylesheet and developed new SCSS files for the header, course list, education, involvement list, and hero image sections.
-
+                    <i>*This portfolio</i>
                   </p>
+                  
                 </div>
                 <a
                   rel="noreferrer"
@@ -247,9 +248,6 @@
                 </a>
               </div>
             </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                
           </div>
           <!-- /END Project -->
 
