fixed footer because i did not like the grey

--- a/src/index.html
+++ b/src/index.html
@@ -351,6 +351,11 @@
             >Jacobo Martínez</a
           >
         </p>
+        <p class="footer__text">
+          © 2025 - Template implemented and extended by
+          <a rel="noreferrer" href="https://github.com/louisarawles" target="_blank"
+            >Louisa Rawles</a
+          >
       </div>
     </footer>
     <!-- /END Footer Section -->
