i just simplified the italics for involvement

--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,7 @@
                 <h3 class="project-wrapper__text-title">My Portfolio</h3>
                 <div>
                   <p class="mb-4">
-                    I extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, html, css, Node.js, and bootstrap
+                    I extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, Parcel, Sass, ScrollReveal.js, Tilt,js, and Bootstrap 4
                     to showcase my skills, background, and experiences.
                     I customized the existing stylesheet and developed new SCSS files for the header, course list, education, involvement list, and hero image sections.
                     <i>*This portfolio</i>
