--- a/src/involvement.html
+++ b/src/involvement.html
@@ -115,8 +115,8 @@
               <p class="involvementlist-wrapper__text">
                   TMT Analyst, September 2025 - Present
               </p>
-              <p class="involvementlist-wrapper__text-italic">
-                  Probationary Member, February 2025 - May 2025
+              <p class="involvementlist-wrapper__text">
+                  <i>Probationary Member, February 2025 - May 2025</i>
               </p>
               <div class="cta-btn cta-btn cta-btn--heroImage">
               <a
@@ -136,10 +136,11 @@
               <p class="involvementlist-wrapper__text">
                   Logistics Chair, September 2025 - Present
               </p>
-              <p class="involvementlist-wrapper__text-italic">
-                  Merchandise Committee Member, September 2024 - May 2025
+              <p class="involvementlist-wrapper__text">
+                 <i>Merchandise Committee Member, September 2024 - May 2025
                   <br>
                   Sponsorship Committee Member, September 2023 - May 2024
+                  </i>
               </p>
               </div>
               </div>
