--- a/src/coursework.html
+++ b/src/coursework.html
@@ -16,6 +16,49 @@
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
 
+  </head>
+    <!-- **** Header **** -->
+    <header class="header">
+        <nav class="nav">
+        <a 
+          rel="noreferrer" 
+          href="index.html"
+          target="_self"
+          >
+          Home
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="involvement.html"
+          target="_self"
+          >
+          Involvement
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="coursework.html"
+          target="_self"
+          >
+          Coursework
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="#about"
+          target="_self"
+          >
+          About Me
+        </a>
+        <a 
+          rel="noreferrer" 
+          href="#contact"
+          target="_blank"
+          >
+          Contact
+        </a>
+      </nav>
+    </header>
+    <!-- /END Header -->
+
     <body>
         <div id="top"></div>
         <section id="hero" class="jumbotron">
@@ -43,7 +86,7 @@
               <div class="courselist-wrapper__text">
                 <h3 class="courselist-wrapper__text-title">SP 26 (Expected)</h3>
               <p class="courselist-wrapper__text">
-                  CS 4710: Aritifical Intelligence
+                  CS 4710: Artifical Intelligence
                   <br>
                   CS 3240: Software Engineering
                   <br>
