--- a/src/involvement.html
+++ b/src/involvement.html
@@ -151,6 +151,56 @@
         </div>
     </section>
     <!-- /END Course Section -->
+         <!-- **** Contact Section **** -->
+    <section id="contact">
+      <div class="container">
+        <h2 class="section-title">Get in touch.</h2>
+        <div class="contact-wrapper load-hidden">
+          <p class="contact-wrapper__text">Contact me with inquiries or to request further information.</p>
+          <a
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--resume"
+            href="mailto:hnj7pk@virginia.edu"
+            >Email Me</a
+          >
+        </div>
+      </div>
+    </section>
+    <!-- /END Contact Section -->
+
+    <!-- **** Footer Section **** -->
+    <footer class="footer navbar-static-bottom">
+      <div class="container">
+        <a rel="noreferrer" href="#top" class="back-to-top">
+          <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
+        </a>
+        <div class="social-links">
+          <a rel="noreferrer" href="https://linkedin.com/in/louisa-rawles-18aa6932a" target="_blank">
+            <i class="fa fa-linkedin fa-inverse"></i>
+          </a>
+          <a rel="noreferrer" href="https://github.com/louisarawles" target="_blank">
+            <i class="fa fa-github fa-inverse"></i>
+          </a>
+        </div>
+
+        <hr />
+
+        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
+        <p class="footer__text">
+          © 2021 - Template developed by
+          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
+            >Jacobo Martínez</a
+          >
+        </p>
+        <p class="footer__text">
+          © 2025 - Template implemented and extended by
+          <a rel="noreferrer" href="https://github.com/louisarawles" target="_blank"
+            >Louisa Rawles</a
+          >
+      </div>
+    </footer>
+    <!-- /END Footer Section -->
     </body>
 <script defer type="module" src="index.js"></script>
   </body>
