--- a/src/involvement.html
+++ b/src/involvement.html
@@ -43,7 +43,7 @@
         </a>
         <a 
           rel="noreferrer" 
-          href="#about"
+          href="index.html #about"
           target="_self"
           >
           About Me
@@ -51,7 +51,7 @@
         <a 
           rel="noreferrer" 
           href="#contact"
-          target="_blank"
+          target="_self"
           >
           Contact
         </a>
