i think i got the header hrefs right

--- a/src/coursework.html
+++ b/src/coursework.html
@@ -43,7 +43,7 @@
         </a>
         <a 
           rel="noreferrer" 
-          href="#about"
+          href="https://louisarawlesportfolio.netlify.app/#about"
           target="_self"
           >
           About Me
