--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
         <a 
           rel="noreferrer" 
           href="#contact"
-          target="_blank"
+          target="_self"
           >
           Contact
         </a>
