--- a/src/involvement.html
+++ b/src/involvement.html
@@ -30,20 +30,20 @@
         <a 
           rel="noreferrer" 
           href="involvement.html"
-          target="_blank"
+          target="_self"
           >
           Involvement
         </a>
         <a 
           rel="noreferrer" 
           href="coursework.html"
-          target="_blank"
+          target="_self"
           >
           Coursework
         </a>
         <a 
           rel="noreferrer" 
-          href="index.html #about"
+          href="https://louisarawlesportfolio.netlify.app/#about"
           target="_self"
           >
           About Me
