--- a/src/index.html
+++ b/src/index.html
@@ -252,33 +252,52 @@
           <!-- /END Project -->
 
           <!-- Notice: each .row is a project -->
-          <!--
+          
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Discovering Hidden Demographic Biases in NLP Models</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    A significant reason behind using NLP models is that they mitigate human bias in outputs. 
+                    NLP models are trained using large datasets, which are initialized with human-provided information, 
+                    but this means the model's foundational information could be vulnerable to human bias, prejudice, 
+                    and stereotyping, raising the question of whether these black-box models process inputs with minimal 
+                    to no influence from bias. Expanding on text bias research by Prabhakaran et al., we considered the 
+                    isolated effects of different gender and race inputs in NLP model outputs.
+                    <br>
+                    <br>
+                    At a high level, our methodology was to create an environment, input and process the dataset, and 
+                    visualize the output for interpretation. We used Python as our primary language, and we carried 
+                    out the experiment using Google Colab and Jupyter Notebook. We set up the environment with NumPy, 
+                    Torch, and Transformers Python packages and instantiated pipelines by importing toxicity and 
+                    sentiment NLP models from Hugging Face. We downloaded sentence and name datasets created by 
+                    Prabhakaren et al. and aggregated the data in Jupyter Notebook. We visualized the results using 
+                    Matplotlib and Seaborn Python packages. 
+                    <br>
+                    <br>
+                    The greatest challenge in our experiment was the lack of statistically significant patterns between categories. 
+                    Thus our results did not reject our null hypothesis that there is no gender or racial 
+                    bias in the NLP models, but they drove me to consider similarities between individual outputs 
+                    and to reevaluate the current procedure, informing future work to enhance the experimental design 
+                    to better isolate variables and identify the existence of patterns or lack thereof.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="pages/hiddenbias.html"
                 >
-                  See Live
+                  See Presentation
                 </a>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="assets/hiddenBiases/HiddenBiases.pdf"
                 >
-                  Source Code
+                  Full Paper
                 </a>
               </div>
             </div>
