--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@
           
           <div class="row">
             <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
+              <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Discovering Hidden Demographic Biases in NLP Models</h3>
                 <div>
                   <p class="mb-4">
@@ -298,25 +298,6 @@
                   href="assets/hiddenBiases/HiddenBiases.pdf"
                 >
                   Full Paper
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
                 </a>
               </div>
             </div>
