--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,8 @@
   </head>
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
-
+  <body>
+    <div id="top"></div>
     <!-- **** Header **** -->
     <header class="header">
         <nav class="nav">
@@ -52,14 +53,14 @@
         </a>
         <a 
           rel="noreferrer" 
-          href="involvement.html"
+          href="./pages/involvement.html"
           target="_self"
           >
           Involvement
         </a>
         <a 
           rel="noreferrer" 
-          href="coursework.html"
+          href="./pages/coursework.html"
           target="_self"
           >
           Coursework
@@ -81,8 +82,6 @@
       </nav>
     </header>
     <!-- /END Header -->
-     <body>
-    <div id="top"></div>
 
     <!-- **** Hero Section **** -->
     <section id="hero" class="jumbotron">
@@ -198,14 +197,14 @@
                 <a
                   rel="noreferrer"
                   class="cta-btn text-color-main"
-                  href="coursework.html"
+                  href="./pages/coursework.html"
                 >
                   Full Courselist
                 </a>
                 <a
                   rel="noreferrer"
                   class="cta-btn text-color-main"
-                  href="involvement.html"
+                  href="./pages/involvement.html"
                 >
                   Involvement on Grounds
                 </a>
@@ -252,10 +251,12 @@
           <!-- /END Project -->
 
           <!-- Notice: each .row is a project -->
-          
           <div class="row">
             <div class="col-lg-4 col-sm-12">
-                <h3 class="project-wrapper__text-title">Discovering Hidden Demographic Biases in NLP Models</h3>
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  Discovering Hidden Demographic Biases in NLP Models
+                </h3>
                 <div>
                   <p class="mb-4">
                     A significant reason behind using NLP models is that they mitigate human bias in outputs. 
@@ -286,7 +287,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="pages/hiddenbias.html"
+                  href="./pages/hiddenbias.html"
                 >
                   See Presentation
                 </a>
@@ -298,6 +299,7 @@
                 >
                   Full Paper
                 </a>
+                </div>
             </div>
           </div>
           <!-- /END Project -->
