Updated about me, navigation links, and added involvement page.

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,13 @@
         </a>
         <a 
           rel="noreferrer" 
+          href="#projects"
+          target="_self"
+          >
+          Projects
+        </a>
+        <a 
+          rel="noreferrer" 
           href="./pages/involvement.html"
           target="_self"
           >
@@ -63,14 +70,7 @@
           href="./pages/coursework.html"
           target="_self"
           >
-          Coursework
-        </a>
-        <a 
-          rel="noreferrer" 
-          href="#about"
-          target="_self"
-          >
-          About Me
+          Education
         </a>
         <a 
           rel="noreferrer" 
@@ -82,25 +82,6 @@
       </nav>
     </header>
     <!-- /END Header -->
-
-    <!-- **** Hero Section **** -->
-    <section id="hero" class="jumbotron">
-      <div class="container">
-        <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Louisa Rawles.</span>
-          <br />
-          I'm a student at the University of Virginia 
-          <br />
-          and a software developer.
-        </h1>
-        <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Learn more</a
-          >
-        </p>
-      </div>
-    </section>
-    <!-- /END Hero Section -->
 
     <!-- **** About Section **** -->
     <section id="about">
@@ -122,27 +103,15 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I study Computer Science and General Business at the University of Virginia, pursuing my passion for learning how to create software that solves real-world challenges and drives long-term impact.
+                I study Computer Science and General Business at the University of Virginia, pursuing my passion for learning how to create software that solves real-world challenges and drives long-term impact.              </p>
+              <p class="about-wrapper__info-text">
+                Outside of class, I study Human-Robot Interaction as a Research Assistant for the UVa Engineering Link Lab - Collaborative Robotics Lab - and I am a Peer Coach for MATH 1310 (Calculus 1).
               </p>
               <p class="about-wrapper__info-text">
-                Outside of class, 
-                I study Human-Robot Interaction as a Research Assistant for the UVa Engineering Link Lab - Collaborative Robotics Lab - and a MATH 1310 (Calculus 1) Peer Coach for the UVa P2L Program.
+                I'm naturally curious, and as such I often find myself exploring new topics outside the scope of my coursework. I love challenging myself with unique goals and adventures, and I'm currently training for my first ski-mountaineering race in February.
               </p>
               <p class="about-wrapper__info-text">
-                In my free time, 
-                I enjoy hiking, 
-                squash, 
-                reading, 
-                scrapbooking, 
-                and refining my mahjong strategy. 
-                I'm naturally curious, 
-                and as such I often find myself exploring new topics outside the scope of my coursework.
-                I love challenging myself with unique goals and adventures, 
-                and I'm currently training for my first ski-mountaineering race in February.
-              </p>
-              <p class="about-wrapper__info-text">
-                My goal as a software engineer is to design technology that transforms our current solution set for complex world problems 
-                driven by a focus on users and the direct and indirect impact of deployment. 
+                My goal as a software engineer is to design technology that transforms our current solution set for complex world problems driven by a focus on users and the direct and indirect impact of deployment.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -161,62 +130,6 @@
     </section>
     <!-- /END About Section -->
 
-    <!-- **** Education Section **** -->
-    <section id="education">
-      <div class="container">
-        <div class="education-wrapper">
-          <h2 class="section-title dark-blue-text">Education</h2>
-
-          <!-- Notice: each .row is an education organization -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="education-wrapper__text">
-                <h3 class="education-wrapper__text-title">The University of Virginia</h3>
-                <h4 class="education-wrapper__text-subtitle">Bachelor of Arts in Computer Science
-                  <br />
-                  Commerce General Business Minor
-                </h4>
-                <h5 class="education-wrapper__text-subtitle">Expected Graduation: May 2027</h5>
-                <p class="mb-4">
-                  In my time at UVa, I have learned the development process through CS 3140 (Software Development Essentials),
-                  including bi-weekly team projects addressing problems such as apportionment of representatives,
-                  building an infinite Wordle, and a bus routes database.
-                  </p>
-                  <p class="mb-4">
-                  My low-level software skills have been honed through extensive practice with algorithms and data structures
-                  in CS 2100 (Data Structures and Algorithms) and CS 3100 (Data Structures and Algorithms 2). Individual 
-                  course projects implement algorithms to solve problems such as dynamic programming and greedy designs for 
-                  optimization problems. 
-                  </p>
-                  <p class="mb-4">
-                  My study of business fundamentals enhances my technical skills, including preparing a business diagram
-                  and financial modeling in CGBM 2130 (Digital Skills for the Workplace), as well as marketing strategies in CGBM 2120
-                  (Principles of Marketing). Additionally, I have a low-level understanding of financial statements and accounting principles from COMM 2010 (Financial Accounting).
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  class="cta-btn text-color-main"
-                  href="./pages/coursework.html"
-                >
-                  Full Courselist
-                </a>
-                <a
-                  rel="noreferrer"
-                  class="cta-btn text-color-main"
-                  href="./pages/involvement.html"
-                >
-                  Involvement on Grounds
-                </a>
-                </div>
-            </div>
-          </div>
-        <!-- /END Education -->
-        </div>
-      </div>
-    </section>
-    <!-- /END Education Section -->
-
         <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
@@ -225,7 +138,6 @@
 
           <!-- Notice: each .row is a project -->
           <div class="row">
-            <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">My Portfolio</h3>
                 <div>
@@ -252,7 +164,6 @@
 
           <!-- Notice: each .row is a project -->
           <div class="row">
-            <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">
                   Discovering Hidden Demographic Biases in NLP Models
@@ -300,7 +211,6 @@
                   Full Paper
                 </a>
                 </div>
-            </div>
           </div>
           <!-- /END Project -->
         </div>
@@ -308,6 +218,7 @@
     </section>
     <!-- /END Projects Section -->
 
+        
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
