Added NFL ML project page, read more button javascript file, and link to the NFL ML project in the index

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,65 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
+        
+          <!-- in progress title section -->
+         <div class="project-wrapper__text-title">
+          <i class="project-wrapper__text-title">
+            In Progress
+          </i>
+         </div>
+         <!-- END in progress title section -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  NFL Next Gen Stats ML Model
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    The NFL records data at each of their games, providing information on individual players and their teams.
+                    I believe that player statistics are the key to unlocking prescriptive measures to improve strategy both on an off the field,                    
+                    as analyzing player statistics in tandem decreases data sylos and contextualizes individual performances within a greater team dynamic. 
+                    <br>
+                    <br>
+                    The project is written primarily in Python, with database invocations written in SQLite and web scraping functions enabled by JSON object parsing.
+                    Important Python frameworks include NumPy and Matplotlib for statistical analysis, requests and dataclasses for data retrieval and encapsulation,
+                    and Pandas and Sklearn for ML classifier training.
+                    <br>
+                    <br>
+                    Note: this project is in the early stages. My current focus is designing and testing the web scrapers and data classes, so that I have the raw data in an
+                    parsed and encapsulated before inserting them into database tables and creating predictions with my ML classifier. Data visualization functions, database loaders and drivers,
+                    a decisicion tree, and the main class file all exist, but they are incomplete and/or have not been refined to fulfill their intended role in the project.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="./pages/NFL_ML.html"
+                >
+                  Learn More
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/louisarawles/NFL-ML"
+                >
+                  Live Code
+                </a>
+                </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- deployed/complete title section -->
+         <div class="project-wrapper__text-title">
+          <i class="project-wrapper__text-title">
+            Deployed/Complete
+          </i>
+         </div>
+         <!-- END deployed/complete title section -->
 
           <!-- Notice: each .row is a project -->
           <div class="row">
