added disclosure about academic requests

--- a/src/index.html
+++ b/src/index.html
@@ -272,6 +272,11 @@
                 </div>
           </div>
           <!-- /END Project -->
+           <h2>
+            <i>
+              **Additional Academic Projects Available by Request for Honor Code Reasons**
+            </i>
+           </h2>
         </div>
       </div>
     </section>
