Added images to each of my projects in index.html, added blurbs on the different sections of my NFL ML project (WHICH IS SO HYPE because my QB insights were right which is insane and the BEARS WONnpm audit fix

--- a/src/index.html
+++ b/src/index.html
@@ -150,6 +150,16 @@
                 <h3 class="project-wrapper__text-title">
                   NFL Next Gen Stats ML Model
                 </h3>
+                <img
+                  alt="NFL ML Example Image"
+                  class="img-fluid rounded shadow-lg"
+                  display=center
+                  height="auto"
+                  width="500px"
+                  src="assets/NFL_ML/introPic.png"
+                />
+                <br>
+                <br>
                 <div>
                   <p class="mb-4">
                     The NFL records data at each of their games, providing information on individual players and their teams.
@@ -198,12 +208,26 @@
           <!-- Notice: each .row is a project -->
           <div class="row">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">My Portfolio</h3>
+                <h3 class="project-wrapper__text-title">
+                  My Portfolio
+                </h3>
+                <img
+                  alt="Ram Icon"
+                  class="img-fluid rounded shadow-lg"
+                  display=center
+                  height="auto"
+                  width="200px"
+                  src="assets/favicon.png"
+                />
+                <br>
+                <br>
                 <div>
                   <p class="mb-4">
-                    I extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, Parcel, Sass, ScrollReveal.js, Tilt,js, and Bootstrap 4
+                    I extended and customized Simplefolio, an open-source template, to create a personal portfolio website with Github, HTML, CSS, and Javascript
                     to showcase my skills, background, and experiences.
                     I customized the existing stylesheet and developed new SCSS files for the header, course list, education, involvement list, and hero image sections.
+                    <br>
+                    <br>
                     <i>*This portfolio</i>
                   </p>
                   
@@ -227,6 +251,16 @@
                 <h3 class="project-wrapper__text-title">
                   Discovering Hidden Demographic Biases in NLP Models
                 </h3>
+                <img
+                  alt="Presentation Snapshot"
+                  class="img-fluid rounded shadow-lg"
+                  display=center
+                  height="auto"
+                  width="500px"
+                  src="assets/hiddenBiases/presentationSnapshot.png"
+                />
+                <br>
+                <br>
                 <div>
                   <p class="mb-4">
                     A significant reason behind using NLP models is that they mitigate human bias in outputs. 
@@ -274,7 +308,7 @@
           <!-- /END Project -->
            <h2>
             <i>
-              **Additional Academic Projects Available by Request for Honor Code Reasons**
+              **Academic project information available by request only (for Honor Code reasons)**
             </i>
            </h2>
         </div>
