Edited the comments at the top of index html and changed my description when you hover over the tab for stylistic reasons (BSCS sounds better than developer IMO bc it feels more accurate and broader)

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <!-- Todo: put here your site title -->
+    <!-- site title -->
     <title>Louisa Rawles | Developer</title>
-    <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
+    <!-- coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="louisarawles, javascript, web development, html, css" />
-    <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="Louisa Rawles | Developer" />
+    <!-- small description of you -->
+    <meta name="description" content="Louisa Rawles | BSCS at UVA" />
 
     <link
       rel="stylesheet"
