--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- site title -->
-    <title>Louisa Rawles | Developer</title>
+    <title>Louisa Rawles | BSCS at UVA</title>
     <!-- coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="louisarawles, javascript, web development, html, css" />
     <!-- small description of you -->
